<resources>
    <string name="app_name">firebase</string>
    <string name="no_data">Not Signed In</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="register">Register </string>
    <string name="login">Login </string>
    <string name="open">Open </string>
    <string name="close">Close </string>

    <string name="dont_have_account">Don\'t Have An Account?</string>
    <string name="already_have_account">Already Have An Account?</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="client_id">904745063373-jdgbqkbpm8vqms2cf8hn5m567v805e6o.apps.googleusercontent.com</string>
    <string name="LOGIN">LOGIN</string>
    <string name="required">Required</string>
    <string name="my_profile_text">My Profile</string>
    <string name="profile_username">username</string>
    <string name="profile_email">email</string>
    <string name="profile_phone_number">phone_number</string>
    <string name="profile_job">job</string>
    <string name="profile_description">description</string>
    <string name="edit_profile_btn">Edit profile</string>
    <string name="profile_delete_account">DELETE Profile</string>
    <string name="profile_log_out_btn">profile_log_out_btn</string>
    <string name="profile_save">Save</string>
    <string name="profile_update">Update Data</string>

</resources>