<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"

    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/login_imge"
    >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_margin="30dp"
        android:background="@drawable/login_imge"
        android:backgroundTint="#A9FFFFFF"
        app:cardBackgroundColor="#FFFFFF"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.35">

            <TextView
                android:id="@+id/textlogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight="0.6"
                android:gravity="center"
                android:paddingHorizontal="10dp"
                android:text="@string/LOGIN"
                android:textColor="@color/green1"
                android:textSize="50sp"
                android:textStyle="bold" />

            <!--        Email Input Field-->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"

                android:layout_marginLeft="20dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/custom_edittext"
                android:hint="@string/email"
                android:textColor="@color/black"
                app:boxStrokeColor="@color/white"
                app:startIconDrawable="@drawable/email_icon"
                app:startIconTint="@color/black"
                app:helperText="@string/required"
                app:helperTextTextColor="?attr/colorError">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailLogin"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textEmailAddress"
                    android:maxLength="40"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <!--        Password Input Field-->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                app:helperText="@string/required"
                app:helperTextTextColor="?attr/colorError"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_edittext"
                android:hint="@string/password"
                android:textColor="@color/black"
                app:boxStrokeColor="@color/white"
                app:startIconDrawable="@drawable/password_icon"
                app:counterEnabled="true"
                app:counterMaxLength="16"
                app:passwordToggleEnabled="true"
                app:startIconTint="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordLogin"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    android:maxLength="16"

                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>
        <!--    Login To Existing Account Button-->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="350dp"
            android:layout_marginRight="20dp"
            android:text="@string/login"
            app:cornerRadius="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.6" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="-60dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.7"
            android:layout_marginTop="400dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.6"
                android:gravity="center"
                android:paddingHorizontal="10dp"
                android:text="@string/dont_have_account"
                android:textSize="18sp"
                android:textAlignment="center"
                android:textColor="@color/green2"

                android:textStyle="bold"/>

            <TextView
                android:id="@+id/registerTV"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:gravity="center_vertical"
                android:text="@string/register"
                android:textColor="#FF0000"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>




</androidx.constraintlayout.widget.ConstraintLayout>