<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/register_imge"
    >
    <!--    android:background="@drawable/"-->

<!--    <com.google.android.material.imageview.ShapeableImageView-->
<!--        android:layout_width="100dp"-->
<!--        android:layout_height="100dp"-->
<!--        android:src="@mipmap/ic_launcher"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.1" />-->
    <androidx.cardview.widget.CardView
        android:layout_width="353dp"
        android:layout_height="518dp"
        android:layout_margin="30dp"
        android:background="@drawable/register_imge"
        android:backgroundTint="#A9FFFFFF"
        android:gravity="center"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textlogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="0.6"
            android:gravity="center"
            android:paddingHorizontal="10dp"
            android:text="Register"
            android:textColor="@color/green1"
            android:textSize="50sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.35">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.35">

                <!--        Email Input Field-->
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="100dp"
                    android:background="@drawable/custom_edittext"
                    android:hint="@string/email"
                    android:textColor="@color/black"
                    android:textColorHighlight="@color/cardview_dark_background"
                    app:boxStrokeColor="@color/white"
                    app:startIconDrawable="@drawable/email_icon"
                    app:startIconTint="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/emailRegister"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="text"
                        android:maxLength="40"
                        android:singleLine="true" />
                </com.google.android.material.textfield.TextInputLayout>

                <!--        Password Input Field-->
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/custom_edittext"
                    android:hint="@string/password"
                    app:boxStrokeColor="@color/white"
                    app:startIconDrawable="@drawable/password_icon"
                    app:startIconTint="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/passwordRegister"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textPassword"
                        android:maxLength="40"
                        android:singleLine="true" />
                </com.google.android.material.textfield.TextInputLayout>

                <CheckBox
                    android:id="@+id/checkBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:text="I confim that your information  is correct and I am subject to rules of the company." />
                <!--    Create a New Account Button-->
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/createAccountBtn"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:backgroundTint="@color/green1"
                    android:text="@string/create_account"
                    app:cornerRadius="50dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.6" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.7">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.7"
                    android:gravity="end|center"
                    android:paddingHorizontal="10dp"
                    android:text="@string/already_have_account"

                    android:textAlignment="center"
                    android:textColor="@color/green2"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/loginTV"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3"
                    android:gravity="center"
                    android:text="@string/login"
                    android:textAlignment="center"
                    android:textColor="#FF0000"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>


            <com.google.android.gms.common.SignInButton
                android:id="@+id/googleBtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="80dp"
                android:backgroundTint="@color/green1"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:cornerRadius="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.8" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>